# ctview

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  RELEASE_NOTES.md  TODO.md  environment.yml  exemple.sh  exemple_control_fast.sh  exemple_ctview_default.sh  exemple_ctview_fast.sh  exemple_default.sh  exemple_docker.sh  exemple_metadata_fast.sh  pyproject.toml  requirements.txt  test_dockerrun.sh  test_launch_test.sh  test_main.sh  test_main_0.sh  test_main_0_small_1dalle.sh  test_main_0b.sh  test_main_0b_water_1dalle.sh  test_main_docker_0.sh  test_main_docker_0b.sh  test_main_docker_1.sh  test_main_docker_3.sh
LUT/: LUT_CLASS.txt  LUT_DENSITY.txt
ci/: run_main_ctview.sh  test.sh
configs/: config.yaml  config_control.yaml  config_ctview.yaml  config_metadata.yaml  config_test.yaml
ctview/: _version.py  add_buffer.py  add_color.py  add_hillshade.py  check_folder.py  clip_raster.py  config.json  config_test.json  environment.yml  gen_LUT_X_cycle.py  main.py  main_control.py  main_ctview.py  main_metadata.py  map_DTM_DSM.py  map_DXM.py  map_class.py  map_density.py  map_intensity.py  parameter.py  test_utils_folder.py  utils_folder.py  utils_gdal.py  utils_pcd.py  utils_pdal.py  utils_raster.py  utils_tools.py
dico/: dictionnaire_LidarHD_provisoire.ptc  dictionnary_alamano.txt  ramp.txt
docker/: Dockerfile  build.sh  clean.sh  deploy.sh
script/: LUT_X_cycle_fct.py  check_folder.py  environment.yml  gen_LUT_X_cycle.py  get_conda.sh  main.py  map_DTM_DSM.py  map_MNS_interp.py  map_MNT.py  map_MNT_interp.py  map_class.py  (+19 more)
(+85 files in other folders)
