[project]
name = "ctview"
dynamic = ["version"]

description = "Generate thematic maps (image views) to easily visualize the content of a point cloud (classification maps, density maps, ...)"
readme = "README.md"

authors = [
  { name = "Elliot Luçon", email = "elliot.lucon@ign.fr" },
  { name = "Yoann Apel", email = "yoann.apel@ign.fr" },
  { name = "Guillaume Liégard", email = "guillaume.liegard@ign.fr" },
  { name = "Léa Vauchier", email = "lea.vauchier@ign.fr" },
]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.bat
  | data
)/
'''

[tool.isort]
profile = "black"
